--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,6 +1,12 @@
 name: Build
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  workflow_dispatch:
+  pull_request:
+  push:
+    paths:
+      - 'source/**'
+      - 'premake5.lua'
 
 jobs:
   build:
